--- a/.github/workflows/CI_license_compliance.yml
+++ b/.github/workflows/CI_license_compliance.yml
@@ -3,6 +3,7 @@ name: Core / License Compliance
 on:
   pull_request:
     paths:
+    # - "integrations/**/pyproject.toml"
     - "integrations/**/pyproject.toml"
   # Since we test PRs, there is no need to run the workflow at each
   # merge on `main`. Let's use a cron job instead.
@@ -42,13 +43,13 @@ jobs:
           pip install toml
           > ${{ env.REQUIREMENTS_FILE }}  # Empty the requirements file if it exists
           # if [ "${{ github.event_name }}" = "schedule" ]; then
-          #   echo "Scheduled run: processing all pyproject.toml files..."
-          #   find integrations -type f -name 'pyproject.toml' | while read file; do
-          #     python .github/utils/pyproject_to_requirements.py $file >> ${{ env.REQUIREMENTS_FILE }}
-          #     echo "" >> ${{ env.REQUIREMENTS_FILE }}  # Add a newline for separation
-          #   done
-          # else
-          if [ true ]; then            
+          if [true]; then
+            echo "Scheduled run: processing all pyproject.toml files..."
+            find integrations -type f -name 'pyproject.toml' | while read file; do
+              python .github/utils/pyproject_to_requirements.py $file >> ${{ env.REQUIREMENTS_FILE }}
+              echo "" >> ${{ env.REQUIREMENTS_FILE }}  # Add a newline for separation
+            done
+          else            
             echo "Pull request: processing changed pyproject.toml files..."
             for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
               python .github/utils/pyproject_to_requirements.py $file >> ${{ env.REQUIREMENTS_FILE }}
