--- a/.github/workflows/chroma.yml
+++ b/.github/workflows/chroma.yml
@@ -56,8 +56,15 @@ jobs:
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
         run: hatch run docs
 
-      - name: Start the Chroma Server
-        run: hatch run chroma run &
+      - name: Start Chroma on Linux/macOS
+        if: runner.os != 'Windows'
+        run: |
+          hatch run chroma run &
+
+      - name: Start Chroma on Windows
+        if: runner.os == 'Windows'
+        run: |
+          start /B hatch run chroma run
 
       - name: Run tests
         run: hatch run cov-retry
