ci: adopt uv as installer (#1142)
* try uv

* pip for typing

* fix docs generation

* fix weaviate

* revert weaviate change

* no setuptools

* try to see if nightly with Haystack main works

* trigger

* fix instructor embedders

* Fix formatting in integrations/chroma/pyproject.toml

---------

Co-authored-by: Silvano Cerza <3314350+silvanocerza@users.noreply.github.com>

--- a/integrations/amazon_sagemaker/pyproject.toml
+++ b/integrations/amazon_sagemaker/pyproject.toml
@@ -45,6 +45,7 @@ root = "../.."
 git_describe_command = 'git describe --tags --match="integrations/amazon_sagemaker-v[0-9]*"'
 
 [tool.hatch.envs.default]
+installer = "uv"
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
@@ -65,8 +66,9 @@ docs = ["pydoc-markdown pydoc/config.yml"]
 python = ["3.8", "3.9", "3.10", "3.11"]
 
 [tool.hatch.envs.lint]
+installer = "uv"
 detached = true
-dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
+dependencies = ["pip", "black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
 [tool.hatch.envs.lint.scripts]
 typing = "mypy --install-types --non-interactive --explicit-package-bases {args:src/ tests}"
 style = ["ruff check {args:.}", "black --check --diff {args:.}"]
