--- a/integrations/chroma/pyproject.toml
+++ b/integrations/chroma/pyproject.toml
@@ -41,6 +41,7 @@ root = "../.."
 git_describe_command = 'git describe --tags --match="integrations/chroma-v[0-9]*"'
 
 [tool.hatch.envs.default]
+installer = "uv"
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
@@ -61,8 +62,10 @@ docs = ["pydoc-markdown pydoc/config.yml"]
 python = ["3.9", "3.10"]
 
 [tool.hatch.envs.lint]
+installer = "uv"
 detached = true
 dependencies = [
+  "pip", 
   "black>=23.1.0",
   "mypy>=1.0.0",
   "ruff>=0.0.243",
