--- a/integrations/weaviate/pyproject.toml
+++ b/integrations/weaviate/pyproject.toml
@@ -26,7 +26,6 @@ classifiers = [
 dependencies = [
   "haystack-ai",
   "weaviate-client>=4.9",
-  "haystack-pydoc-tools",
   "python-dateutil",
 ]
 
@@ -48,7 +47,7 @@ git_describe_command = 'git describe --tags --match="integrations/weaviate-v[0-9
 
 [tool.hatch.envs.default]
 installer = "uv"
-dependencies = ["coverage[toml]>=6.5", "pytest", "pytest-rerunfailures", "ipython"]
+dependencies = ["coverage[toml]>=6.5", "pytest", "pytest-rerunfailures", "ipython", "haystack-pydoc-tools"]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
 test-cov = "coverage run -m pytest {args:tests}"
